<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".ui.history.HistoryFragment">

    <TextView
        android:id="@+id/history_fragment_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/history_fragment_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="6dp"
        android:translationZ="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-6dp"
            android:background="@color/transparent"
            android:paddingStart="8dp"
            android:text="CO2 ppm"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            android:translationZ="1dp"
            tools:ignore="HardcodedText,RtlSymmetry,SmallSp" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/co2LineChart"
            android:layout_width="match_parent"
            android:layout_height="325dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="end"
            android:layout_marginTop="-63dp"
            android:layout_marginEnd="32dp"
            android:background="@color/transparent"
            android:text="Time"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:elevation="3dp"
            app:cardBackgroundColor="@color/covidbuster_light_blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lastTimeUpdatedTimeTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    tools:text="@string/history_fragment_last_time_updated_date"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_weight="2"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/history_fragment_last_time_updated_date"
                    android:gravity="top|center"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:layout_weight="3"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/covidbuster_blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lastTimeUpdatedDateTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@string/history_fragment_last_time_updated_time"
                    android:gravity="bottom|center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/history_fragment_last_time_updated_time"
                    android:gravity="top|center"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:layout_weight="3"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/covidbuster_purple">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lastTimeUpdatedCo2ValueTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="@string/history_fragment_last_time_updated_co2_value"
                    android:gravity="bottom|center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/history_fragment_last_time_updated_co2_value"
                    android:gravity="top|center"
                    android:textColor="@color/teal_200"
                    android:textStyle="bold"
                    android:textSize="10sp"
                    android:layout_weight="3"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/lastTimeUpdatedSafetyStatusTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="SAFE"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:paddingTop="12dp"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/history_fragment_safe_status"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="10sp"
        tools:ignore="HardcodedText,SmallSp" />

</LinearLayout>